# VEDA_SCHEDULAR_PROJECT

./: README.md
Schedular_Project/: .clang-format  .gitignore  CMakeLists.txt  add_schedule_dialog.cpp  add_schedule_dialog.h  add_schedule_dialog.ui  app_controller.cpp  app_controller.h  date_header.cpp  date_header.h  default_schedules.json  draw_gantt_row.cpp  draw_gantt_row.h  login_error.cpp  login_error.h  login_error.ui  login_left_painter.cpp  login_left_painter.h  login_page.cpp  login_page.h  login_page.ui  login_register.cpp  login_register.h  login_register.ui  login_register_mismatch.cpp  login_register_mismatch.h  login_register_mismatch.ui  login_register_success.cpp  login_register_success.h  login_register_success.ui  main.cpp  main_page.cpp  main_page.h  main_page.ui  project.cpp  project.h  project_dialog.cpp  project_dialog.h  project_dialog.ui  resources.qrc  (+9 more)
Schedular_Project/db/: schedules.example.json  users.example.json
Schedular_Project/resources/: resources.qrc  schedules.json
